[Feature] Add "Pause and remind" feature. Possible intervals ini controlled + custom oneshot.

--- a/ConfFiles/SmallBro.ini
+++ b/ConfFiles/SmallBro.ini
@@ -17,6 +17,9 @@ LastTimestamp = 17/11/2015 13:10:04
 [StartupReminder]
 Interval = 5 sec
 
+[ManualReminder]
+Intervals = 5 mins, 30 mins, 1 hour
+
 [LocalizationFiles]
 Language = fr
 Messages = ConfFiles\Messages.ini
