--- a/ConfFiles/SmallBro.ini
+++ b/ConfFiles/SmallBro.ini
@@ -1,8 +1,10 @@
 [General]
 
-TaskNames=First, Second, Third, Forth , Fifth
+TaskNames=First, Second, Third, Forth , Fifth, Sixth, Seventh, Eigth, Ninth, Tenth
 TimerFile="TimerFile.log"
 OutputFile="OutputFile.log"
+MaxItems = 5
+Order = descending
 
 [Colors]
 ActiveTask=50,0,200,200
