[Refactoring] Renaming to LittleBrother, cleaning icons and images

--- a/app.config
+++ b/app.config
@@ -2,11 +2,11 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="SmallBrother.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="LittleBrother.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
-        <SmallBrother.Properties.Settings>
+        <LittleBrother.Properties.Settings>
             <setting name="InteractionPanelColor" serializeAs="String">
                 <value>PaleGreen</value>
             </setting>
@@ -16,6 +16,6 @@
             <setting name="TestSomeValueColor" serializeAs="String">
                 <value>DarkRed</value>
             </setting>
-        </SmallBrother.Properties.Settings>
+        </LittleBrother.Properties.Settings>
     </userSettings>
 </configuration>
