--- a/ConfFiles/Messages.ini
+++ b/ConfFiles/Messages.ini
@@ -1,3 +1,3 @@
 [ChooseProject]
-eng = Small Brother is watching you: Don't forget to choose a project.
+eng = Little Brother is watching you: Don't forget to choose a project.
 fr = Petit Frère t'observe. N'oublie pas de choisir un projet.
