[Refactoring] Removed dead code. Cleaned ini file.

--- a/ConfFiles/Labels.ini
+++ b/ConfFiles/Labels.ini
@@ -16,3 +16,4 @@ fr = Rappel dans
 
 [IconText]
 eng = Simply record what task you work on.
+fr = Note simplement sur quelle projet t'est en train de bosser.
