--- a/ConfFiles/SmallBro.ini
+++ b/ConfFiles/SmallBro.ini
@@ -1,13 +1,8 @@
 [General]
 
 TaskNames=First, Second, Third, Forth , Fifth, Sixth, Seventh, Eigth, Ninth, Tenth
-TimerFile="TimerFile.log"
-OutputFile="OutputFile.log"
 MaxItems = 5
 Order = descending
-
-[Colors]
-ActiveTask=50,0,200,200
 
 [Values]
 DefaultReminderUnit = minute
@@ -22,7 +17,5 @@ Interval = 5 sec
 [ManualReminder]
 Intervals = 5 mins, 30 mins, 1 hour
 
-[LocalizationFiles]
-Language = fr
-Messages = ConfFiles\Messages.ini
-Labels = ConfFiles\Labels.ini
+[Localization]
+Language = eng
