--- a/app.config
+++ b/app.config
@@ -2,11 +2,12 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="LittleBrother.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="LittleBrother.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
-        <LittleBrother.Properties.Settings>
+        <LittleBrother.Settings>
             <setting name="InteractionPanelColor" serializeAs="String">
                 <value>PaleGreen</value>
             </setting>
@@ -16,6 +17,21 @@
             <setting name="TestSomeValueColor" serializeAs="String">
                 <value>DarkRed</value>
             </setting>
-        </LittleBrother.Properties.Settings>
+            <setting name="FileDir" serializeAs="String">
+                <value>ConfFiles</value>
+            </setting>
+            <setting name="ActiveTaskColor" serializeAs="String">
+                <value>50,0,200,200</value>
+            </setting>
+            <setting name="TimerFile" serializeAs="String">
+                <value>TimerFile.log</value>
+            </setting>
+            <setting name="LocalizationMessagesFile" serializeAs="String">
+                <value>Messages.ini</value>
+            </setting>
+            <setting name="LocalizationLabelsFile" serializeAs="String">
+                <value>Labels.ini</value>
+            </setting>
+        </LittleBrother.Settings>
     </userSettings>
 </configuration>
