[Refactoring] From ini to settings. Create ini on first startup.

--- a/Resources/DefaultIni.ini
+++ b/Resources/DefaultIni.ini
@@ -1,14 +1,14 @@
 [General]
-TaskNames=First, Second, Third, Forth , Fifth, Sixth, Seventh, Eigth, Ninth, Tenth
+TaskNames=
 MaxItems = 5
-Order = descending
+Order = chronological
 
 [Values]
 DefaultReminderUnit = minute
 
 [AutoBackupData]
 SaveInterval = 10 sec
-LastTimestamp = 17/11/2015 13:10:04
+LastTimestamp = 
 
 [StartupReminder]
 Interval = 5 sec
