--- a/app.config
+++ b/app.config
@@ -5,6 +5,9 @@
             <section name="LittleBrother.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="LittleBrother.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="LittleBrother.Properties.Menu" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <userSettings>
         <LittleBrother.Settings>
@@ -18,7 +21,7 @@
                 <value>DarkRed</value>
             </setting>
             <setting name="FileDir" serializeAs="String">
-                <value>ConfFiles</value>
+                <value>.</value>
             </setting>
             <setting name="ActiveTaskColor" serializeAs="String">
                 <value>50,0,200,200</value>
@@ -34,4 +37,11 @@
             </setting>
         </LittleBrother.Settings>
     </userSettings>
+    <applicationSettings>
+        <LittleBrother.Properties.Menu>
+            <setting name="NewProjectWatermarkText" serializeAs="String">
+                <value>Add project...</value>
+            </setting>
+        </LittleBrother.Properties.Menu>
+    </applicationSettings>
 </configuration>
