--- a/LittleBrother.csproj
+++ b/LittleBrother.csproj
@@ -80,6 +80,11 @@
     <Compile Include="ContextMenus.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="IniController.cs" />
+    <Compile Include="Properties\Menu.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Menu.settings</DependentUpon>
+    </Compile>
     <Compile Include="MessageForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +100,11 @@
     <Compile Include="ProcessIcon.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="TimerFile.cs" />
     <EmbeddedResource Include="AboutBox.resx">
       <DependentUpon>AboutBox.cs</DependentUpon>
@@ -109,23 +119,22 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <CustomToolNamespace>LittleBrother</CustomToolNamespace>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="ConfFiles\Labels.ini" />
     <None Include="ConfFiles\Messages.ini" />
     <None Include="ConfFiles\SmallBro.ini" />
+    <None Include="Properties\Menu.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Menu.Designer.cs</LastGenOutput>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
       <CustomToolNamespace>LittleBrother</CustomToolNamespace>
     </None>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -135,6 +144,7 @@
   <ItemGroup>
     <Content Include="Images\Hourglass-Round.ico" />
     <Content Include="Images\Hourglass-Round.txt" />
+    <None Include="Resources\DefaultIni.ini" />
     <None Include="Images\Hourglass-Flat.png" />
     <Content Include="Images\Hourglass-Flat.txt" />
     <Content Include="Images\Hourglass-Flat.ico" />
