--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -12,7 +12,7 @@
       <Value Profile="(Default)">DarkRed</Value>
     </Setting>
     <Setting Name="FileDir" Type="System.String" Scope="User">
-      <Value Profile="(Default)">ConfFiles</Value>
+      <Value Profile="(Default)">.</Value>
     </Setting>
     <Setting Name="ActiveTaskColor" Type="System.String" Scope="User">
       <Value Profile="(Default)">50,0,200,200</Value>
