--- a/app.config
+++ b/app.config
@@ -2,32 +2,46 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="LittleBrother.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-            <section name="LittleBrother.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="LittleBrother.Properties.Menu" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+            <section name="LittleBrother.Properties.Menu" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="LittleBrother.Properties.General" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
-        <LittleBrother.Settings>
+        <LittleBrother.Properties.Menu>
+            <setting name="NewProjectWatermarkText" serializeAs="String">
+                <value>Add project...</value>
+            </setting>
+            <setting name="NewIntervalWatermarkText" serializeAs="String">
+                <value>"How long?"</value>
+            </setting>
+            <setting name="ReminderTextWatermarkText" serializeAs="String">
+                <value>You asked to be reminded of something.</value>
+            </setting>
+            <setting name="ClearText" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="WatermarkTextColor" serializeAs="String">
+                <value>200,200,200</value>
+            </setting>
+            <setting name="NewItemTextColor" serializeAs="String">
+                <value>0,0,0</value>
+            </setting>
+            <setting name="ActiveTaskColor" serializeAs="String">
+                <value>50,0,200,200</value>
+            </setting>
+        </LittleBrother.Properties.Menu>
+        <LittleBrother.Properties.General>
             <setting name="InteractionPanelColor" serializeAs="String">
                 <value>PaleGreen</value>
             </setting>
             <setting name="RemindLaterButton" serializeAs="String">
                 <value>LightGreen</value>
             </setting>
-            <setting name="TestSomeValueColor" serializeAs="String">
-                <value>DarkRed</value>
-            </setting>
             <setting name="FileDir" serializeAs="String">
                 <value>.</value>
             </setting>
-            <setting name="ActiveTaskColor" serializeAs="String">
-                <value>50,0,200,200</value>
-            </setting>
             <setting name="TimerFile" serializeAs="String">
-                <value>TimerFile.log</value>
+                <value>TimerFile.Instance.log</value>
             </setting>
             <setting name="LocalizationMessagesFile" serializeAs="String">
                 <value>Messages.ini</value>
@@ -35,13 +49,6 @@
             <setting name="LocalizationLabelsFile" serializeAs="String">
                 <value>Labels.ini</value>
             </setting>
-        </LittleBrother.Settings>
+        </LittleBrother.Properties.General>
     </userSettings>
-    <applicationSettings>
-        <LittleBrother.Properties.Menu>
-            <setting name="NewProjectWatermarkText" serializeAs="String">
-                <value>Add project...</value>
-            </setting>
-        </LittleBrother.Properties.Menu>
-    </applicationSettings>
 </configuration>
